comentario de guia

--- a/css/nuevousuario.css
+++ b/css/nuevousuario.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/utils/cateterismogif.gif);
+  background-image: url(../utils/cateterismogif.gif);
 }
 
 /* <!-- Navbar - >  */
