--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,7 @@ section {
   position: relative;
   height: 100vh;
   width: 100%;
-  background: url("/utils/carusel.jpg");
+  background: url("../utils/carusel.jpg");
   background-size: cover;
   background-position: center center;
 }
