--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -24,21 +24,15 @@
     justify-content: center;
   }
   .titaño {
-    font-size: 20px;
-    position: relative;
-    width: 300px;
-    height: 188px;
-    text-align: center;
+    font-size: 21px;
     font-family: Roboto;
-    font-style: italic;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 260.69%;
-    /* or 33px */
-
-    color: #03ff3b;
-
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: #fdfffd;
+  }
+  .nuestrapolitica {
+    font-size: 20px;
+    font-family: Roboto;
+    color: #fdfffd;
+    padding: 20px;
   }
   .TextoQuienesSomos {
     font-size: 18px;
