--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -22,13 +23,17 @@ section {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3)));
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   width: 380px;
   padding: 50px 30px;
   border-radius: 10px;
-  box-shadow: 7px 7px 60px black;
+  -webkit-box-shadow: 7px 7px 60px black;
+          box-shadow: 7px 7px 60px black;
 }
+
 h1 {
   text-transform: uppercase;
   font-size: 2em;
@@ -48,10 +53,11 @@ h1 {
 
 .control1 {
   background: crimson;
-  color: rgb(0, 0, 0);
+  color: black;
   text-transform: uppercase;
   font-size: 1.2em;
   opacity: 0, 9;
+  -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
@@ -62,22 +68,28 @@ h1 {
 .link {
   text-align: center;
 }
-.link a {
-  color: rgb(255, 6, 213);
-  text-decoration: #fff;
 
+.link a {
+  color: #ff06d5;
+  -webkit-text-decoration: #fff;
+          text-decoration: #fff;
+  -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
+
 .link a:hover {
   opacity: 1;
 }
 
 button.btn.btn-danger {
-  align-items: center;
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 11, 11);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+  color: #ff0b0b;
 }
 
 nav {
   background-color: black;
 }
+/*# sourceMappingURL=login.css.map */
