--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,24 @@
 @charset "UTF-8";
+* {
+  font-size: 20px;
+  font-size: 21px;
+  font-family: Roboto;
+  color: #fdfffd;
+}
+
+.nav-link {
+  display: block;
+  padding: 0.4rem 2rem;
+  font-size: 21px;
+  font-family: Roboto;
+  color: #fdfffd;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+
 .container {
   text-align: center;
   font-family: "Alegreya", sans-serif;
@@ -12,8 +32,11 @@
 }
 
 .menubuttons :hover {
-  background-color: #3b3a3a;
+  background-color: white;
   border-radius: 30px;
+  font-size: 20px;
+  font-family: Roboto;
+  color: #000000;
 }
 
 .menubuttons a {
@@ -29,7 +52,7 @@
 }
 
 .NicoDropdown a :hover {
-  background-color: #3b3a3a;
+  background-color: #3877ec;
 }
 
 .NicoDropdownItems :active {
@@ -37,7 +60,7 @@
 }
 
 .NicoDropdownItems :hover {
-  background-color: #3b3a3a;
+  background-color: #3877ec;
 }
 
 .NicoDropdownItems a {
@@ -103,19 +126,16 @@ img {
 }
 
 .SeccionesTexto .titaño {
-  font-size: 20px;
-  position: relative;
-  width: 300px;
-  height: 188px;
-  text-align: center;
+  font-size: 21px;
   font-family: Roboto;
-  font-style: italic;
-  font-weight: 900;
-  font-size: 22px;
-  line-height: 260.69%;
-  /* or 33px */
-  color: #03ff3b;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #fdfffd;
+}
+
+.SeccionesTexto .nuestrapolitica {
+  font-size: 20px;
+  font-family: Roboto;
+  color: #fdfffd;
+  padding: 20px;
 }
 
 .SeccionesTexto .TextoQuienesSomos {
@@ -171,18 +191,13 @@ img {
 }
 
 /*texto informativo alado del carusel */
-.titaño {
-  position: relative;
-  width: 300px;
-  height: 188px;
-  text-align: center;
-  font-family: Roboto;
-  font-style: italic;
-  font-weight: 900;
-  font-size: 22px;
-  line-height: 260.69%;
-  /* or 33px */
-  color: #03ff3b;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+h1 {
+  margin: 6rem auto 4rem;
+  letter-spacing: 5px;
+}
+
+h2 {
+  margin: 4rem auto 2rem;
+  letter-spacing: 5px;
 }
 /*# sourceMappingURL=style.css.map */
