--- a/sass/login.scss
+++ b/sass/login.scss
@@ -1,158 +1,83 @@
-/* Login de mi sitio web */
-body {
+* {
   margin: 0;
   padding: 0;
-  background: url(/utils/santov.png);
+  box-sizing: border-box;
+}
 
-  opacity: 1.5;
+body {
+  font-family: "Alegreya", sans-serif;
+  color: #fff;
+}
 
-  filter: alpha(opacity=100);
-  zoom: 1;
-  font-family: "Alegreya", serif;
+section {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: url("../utils/carusel.jpg");
   background-size: cover;
+  background-position: center center;
 }
-ul li a {
-  color: rgb(234, 234, 234);
-  font-size: 15px;
-}
-header {
-  background-color: var(--color-primario);
 
-  color: rgb(0, 0, 0);
-  text-align: center;
-}
-.login-box {
-  width: 280px;
+.form-container {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #f3f6fc;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  width: 380px;
+  padding: 50px 30px;
+  border-radius: 10px;
+  box-shadow: 7px 7px 60px black;
 }
-.login-box h1 {
-  float: left;
-  font-size: 40px;
-  border-bottom: 10px solid#fcfcff;
-  margin-bottom: 20px;
-  padding: 1px 0;
-}
-.textbox {
-  width: 100%;
-  overflow: hidden;
-  font-size: 20px;
-  padding: 8px 0;
-  margin: 8px 0;
-  border-bottom: 6px solid #0390ee;
-  color: #fafdff;
-}
-.textbox i {
-  width: 26px;
-  float: left;
-  text-align: center;
-  color: black;
-}
-.textbox input {
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 18px;
-  color: #ffffff;
-  width: 30%;
-  float: left;
-  margin: 0 10px;
-}
-.btn {
-  width: 100%;
-  background: #0390ee;
-  border: 10px solid #0390ee;
-  border-radius: 40px;
-  color: rgb(255, 255, 255);
-  padding: 5px;
-  font-size: 18px;
-  cursor: pointer;
-  margin: 12px 0;
-}
-input::placeholder {
-  color: #ffffff;
-}
-.rounded-pill {
-  border-radius: 30px;
-  background: red;
-}
-.get_in_touch {
-  max-width: 800px;
-  margin: 50px auto;
-  position: relative;
-
-  padding: 30px;
-}
-.get_in_touch .title {
+h1 {
   text-transform: uppercase;
+  font-size: 2em;
   text-align: center;
-  letter-spacing: 3px;
-  font-size: 3em;
-  line-height: 48px;
-  padding-bottom: 20px;
-  color: #5532ca;
-  background: linear-gradient(to right, #f4524d 0% #5533ca 100%);
+  margin-bottom: 2em;
 }
 
-.contact-form .form-field {
-  position: relative;
-  margin: 32px 0;
-}
-.contact-form .input-text {
+.control input {
+  width: 100%;
   display: block;
-  width: 100%;
-  height: 36px;
-  border-width: 0 0 2px 0;
-  border-color: #5543ca;
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 400;
-}
-.contact-form .input-text:focus + .label,
-.contact-form .input-text.not-empty + .label {
-  transform: translateY(-24px);
-}
-.contact-form .input-text:focus {
-  outline: none;
-}
-.contact-form .label {
-  position: absolute;
-  left: 20px;
-  bottom: 11px;
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 400;
-  color: #5543ca;
-  transition: transform 0.2s ease-in-out;
-  cursor: text;
-  text-transform: capitalize;
-}
-/* .submit-btn {
-  display: inline-block;
-  background-image: linear-gradiente(red, #a72879, #064497);
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 16px;
-  padding: 8px 16px;
+  padding: 10px;
+  color: #222;
   border: none;
-  width: 200px;
-  cursor: pointer;
-} */
-.contact-form .submit-btn {
-  display: inline-block;
-  width: 200px;
-  background: #0d69b4;
-  border: 5px solid #8100eb;
-  border-radius: 40px;
-  color: rgb(255, 255, 255);
-  padding: 8px 16px;
-  font-size: 18px;
-  cursor: pointer;
-  margin: 12px 0;
+  outline: none;
+  margin: 2em 0;
+}
+
+.control1 {
+  background: crimson;
+  color: rgb(0, 0, 0);
   text-transform: uppercase;
-  letter-spacing: 1px;
+  font-size: 1.2em;
+  opacity: 0, 9;
+  transition: opacity 0.3s ease;
+}
+
+.control input [type="submit"] :hover {
+  opacity: 1;
+}
+
+.link {
+  text-align: center;
+}
+.link a {
+  color: rgb(255, 6, 213);
+  text-decoration: #fff;
+
+  transition: opacity 0.3s ease;
+}
+.link a:hover {
+  opacity: 1;
+}
+
+button.btn.btn-danger {
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 11, 11);
+}
+
+nav {
+  background-color: black;
 }
