--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,25 @@
 @import "fonts";
 @import "colors";
 @import "mixin";
+* {
+  font-size: 20px;
+  font-size: 21px;
+  font-family: Roboto;
+  color: #fdfffd;
+}
 
+.nav-link {
+  display: block;
+  padding: 0.4rem 2rem;
+  font-size: 21px;
+  font-family: Roboto;
+  color: #fdfffd;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
 .container {
   text-align: center;
   font-family: $general-font;
@@ -12,8 +30,11 @@
 .menubuttons {
   @include button;
   :hover {
-    background-color: rgb(59, 58, 58);
+    background-color: rgb(255, 255, 255);
     border-radius: 30px;
+    font-size: 20px;
+    font-family: Roboto;
+    color: #000000;
   }
 
   a {
@@ -105,19 +126,25 @@ img {
   }
 }
 /*texto informativo alado del carusel */
-.titaño {
-  position: relative;
-  width: 300px;
-  height: 188px;
-  text-align: center;
-  font-family: Roboto;
-  font-style: italic;
-  font-weight: 900;
-  font-size: 22px;
-  line-height: 260.69%;
-  /* or 33px */
+// .titaño {
 
-  color: #03ff3b;
+//   font-family: Roboto;
+//   font-style: italic;
+//   font-weight: 900;
+//   font-size: 22px;
+//   line-height: 260.69%;
+//   /* or 33px */
 
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//   color: #03ff3b;
+
+//   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+// }
+h1 {
+  margin: 6rem auto 4rem;
+  letter-spacing: 5px;
+}
+
+h2 {
+  margin: 4rem auto 2rem;
+  letter-spacing: 5px;
 }
