--- a/sass/valvulas.scss
+++ b/sass/valvulas.scss
@@ -6,54 +6,129 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #fdfdfd;
-  background-color: rgb(10, 10, 10);
-  background-image: url(/utils/more);
+  background-color: rgb(5, 5, 5);
 }
+@import "fonts";
+@import "colors";
+@import "mixin";
 
-img {
-  width: 400px;
-  top: 20px;
-}
-
-.navbar-collapse {
-  flex-basis: 100%;
-  flex-grow: 1;
-  align-items: center;
-}
-
+/*header*/
 .text-primary {
   color: #ff0505 !important;
 }
-
+container-fluid {
+  margin: 30px;
+}
 .bg-dark {
-  background-color: #000000 !important;
+  background-color: rgb(0, 0, 0) !important;
 }
 
 .navbar-dark .navbar-nav .nav-link {
   color: aliceblue;
 }
 
-.card-body {
-  background-color: rgb(0, 0, 0);
+/*Procedimientos*/
+
+.Procedimientos_imagenes {
+  display: flex;
+  justify-content: space-evenly;
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .Procedimientos_imagenes {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 375px) and (max-width: 767px) {
+  .Procedimientos_imagenes {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+.Procedimientos_imagenes img {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.Procedimientos h1 {
+  margin: 4rem auto 2rem;
   color: rgb(255, 255, 255);
 }
 
-.container {
-  margin-top: 10px;
-  padding: 10px;
+.Procedimientos__subtitulo {
+  color: var(--ColorPrimarioTexto);
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 2rem 1rem;
+  text-align: center;
+  color: rgb(249, 255, 255);
 }
 
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
+.Procedimientos__imagen {
+  width: 40rem;
+  height: 60rem;
+  margin-top: 4rem;
+  padding: 2rem;
+  border-radius: 2rem;
   background-color: rgb(0, 0, 0);
-  background-clip: border-box;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-  border-radius: 0.25rem;
-  align-items: center;
-  opacity: 0, 9;
-  transition: opacity 0.3s ease;
+
+  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.75);
+  transition: transform 0.5s; /*para dar efecto escalable*/
+}
+.Procedimientos__imagen:hover {
+  transform: scale(1.03); /*para dar efecto escalable*/
+
+  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.75);
+  transition: transform 0.5s;
+}
+@media (min-width: 1025px) and (max-width: 1400px) {
+  .Procedimientos__imagen {
+    width: 40rem;
+    height: 60rem;
+    margin: 4rem 2rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: var();
+
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
+  .Procedimientos__imagen:hover {
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .Procedimientos__imagen {
+    width: 92%;
+    margin: 1rem auto;
+  }
+}
+@media (min-width: 375px) and (max-width: 767px) {
+  .Procedimientos__imagen {
+    width: 90%;
+    margin: 1rem auto;
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
+  .Procedimientos__imagen:hover {
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
+  .Procedimientos h1 {
+    margin-top: 1rem;
+  }
+}
+
+.Procedimientos__imagen p {
+  text-align: center;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 1.4rem auto;
+}
+
+iframe.ytp-cued-thumbnail-overlay-image {
+  background-size: cover;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 10px;
+
+  position: absolute;
 }
