--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -24,20 +24,14 @@ section {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 0.3)),
-    to(rgba(0, 0, 0, 0.3))
-  );
+          transform: translate(-50%, -50%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3)));
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   width: 380px;
   padding: 50px 30px;
   border-radius: 10px;
   -webkit-box-shadow: 7px 7px 60px black;
-  box-shadow: 7px 7px 60px black;
+          box-shadow: 7px 7px 60px black;
 }
 
 h1 {
@@ -78,7 +72,7 @@ h1 {
 .link a {
   color: #ff06d5;
   -webkit-text-decoration: #fff;
-  text-decoration: #fff;
+          text-decoration: #fff;
   -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
@@ -89,8 +83,8 @@ h1 {
 
 button.btn.btn-danger {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: black;
   color: #ff0b0b;
 }
