--- a/css/style.css
+++ b/css/style.css
@@ -1,203 +1,2 @@
-@charset "UTF-8";
-* {
-  font-size: 20px;
-  font-size: 21px;
-  font-family: Roboto;
-  color: #fdfffd;
-}
-
-.nav-link {
-  display: block;
-  padding: 0.4rem 2rem;
-  font-size: 21px;
-  font-family: Roboto;
-  color: #fdfffd;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-}
-
-.container {
-  text-align: center;
-  font-family: "Alegreya", sans-serif;
-  color: #ffffff;
-  background-color: black;
-}
-
-.menubuttons {
-  border-radius: 0px;
-  width: 40%;
-}
-
-.menubuttons :hover {
-  background-color: white;
-  border-radius: 30px;
-  font-size: 20px;
-  font-family: Roboto;
-  color: #000000;
-}
-
-.menubuttons a {
-  color: white;
-}
-
-.NicoDropdown {
-  margin-left: 5%;
-}
-
-.NicoDropdown a {
-  color: #f8f8f8;
-}
-
-.NicoDropdown a :hover {
-  background-color: #3877ec;
-}
-
-.NicoDropdownItems :active {
-  background-color: white;
-}
-
-.NicoDropdownItems :hover {
-  background-color: #3877ec;
-}
-
-.NicoDropdownItems a {
-  color: black;
-}
-
-.NicoDropdownItems a :hover {
-  background-color: white;
-}
-
-.NicoDropdownItems a :active {
-  background-color: black;
-}
-
-.menuContainer {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding-left: 10px;
-}
-
-.SeccionPoliticas,
-.SeccionNosotros {
-  background-color: black;
-}
-
-body {
-  background-color: black;
-}
-
-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 10px 0px 10px 10px;
-}
-
-.Secciones {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.SeccionesTexto .SeccionesTexto {
-  -ms-flex-line-pack: justify;
-      align-content: justify;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.SeccionesTexto .titaño {
-  font-size: 21px;
-  font-family: Roboto;
-  color: #fdfffd;
-}
-
-.SeccionesTexto .nuestrapolitica {
-  font-size: 20px;
-  font-family: Roboto;
-  color: #fdfffd;
-  padding: 20px;
-}
-
-.SeccionesTexto .TextoQuienesSomos {
-  font-size: 18px;
-}
-
-.SeccionesTexto .TextoPoliticas {
-  font-size: 18px;
-}
-
-.SeccionesTexto h2 {
-  text-align: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.SeccionesTexto p {
-  text-align: justify;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.NicoCarrusel {
-  -ms-flex-line-pack: center;
-      align-content: center;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  border: 0px;
-}
-
-.carouselContainer {
-  padding: 0px;
-  padding-left: 0px;
-}
-
-.containerNopadding {
-  padding: 0px;
-  padding-right: 10px;
-}
-
-/*Media querys*/
-@media (max-width: 800px) {
-  .Secciones {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
-/*texto informativo alado del carusel */
-h1 {
-  margin: 6rem auto 4rem;
-  letter-spacing: 5px;
-}
-
-h2 {
-  margin: 4rem auto 2rem;
-  letter-spacing: 5px;
-}
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap");
 /*# sourceMappingURL=style.css.map */
