--- a/css/valvulas.css
+++ b/css/valvulas.css
@@ -26,6 +26,10 @@ container-fluid {
 }
 
 /*Procedimientos*/
+.Procedimientos img {
+  width: auto;
+}
+
 .Procedimientos_imagenes {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,22 +39,18 @@ container-fluid {
           justify-content: space-evenly;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .Procedimientos_imagenes {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
+.Procedimientos_imagenes {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
-@media (min-width: 375px) and (max-width: 767px) {
-  .Procedimientos_imagenes {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
+.Procedimientos_imagenes {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
 }
 
 .Procedimientos_imagenes img {
@@ -100,44 +100,40 @@ container-fluid {
   transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
-@media (min-width: 1025px) and (max-width: 1400px) {
-  .Procedimientos__imagen {
-    width: 40rem;
-    height: 60rem;
-    margin: 4rem 2rem;
-    padding: 2rem;
-    border-radius: 2rem;
-    background-color: var();
-    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-  }
-  .Procedimientos__imagen:hover {
-    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-  }
+.Procedimientos__imagen {
+  width: 40rem;
+  height: 60rem;
+  margin: 4rem 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+  -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .Procedimientos__imagen {
-    width: 92%;
-    margin: 1rem auto;
-  }
+.Procedimientos__imagen:hover {
+  -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
 }
 
-@media (min-width: 375px) and (max-width: 767px) {
-  .Procedimientos__imagen {
-    width: 90%;
-    margin: 1rem auto;
-    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-  }
-  .Procedimientos__imagen:hover {
-    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-  }
-  .Procedimientos h1 {
-    margin-top: 1rem;
-  }
+.Procedimientos__imagen {
+  width: 92%;
+  margin: 1rem auto;
+}
+
+.Procedimientos__imagen {
+  width: 90%;
+  margin: 1rem auto;
+  -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+}
+
+.Procedimientos__imagen:hover {
+  -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+}
+
+.Procedimientos h1 {
+  margin-top: 1rem;
 }
 
 .Procedimientos__imagen p {
@@ -145,13 +141,5 @@ container-fluid {
   font-weight: normal;
   line-height: 1.5;
   margin: 1.4rem auto;
-}
-
-iframe.ytp-cued-thumbnail-overlay-image {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 10px;
-  position: absolute;
 }
 /*# sourceMappingURL=valvulas.css.map */
