--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,150 +1,2 @@
-@import "fonts";
-@import "colors";
-@import "mixin";
-* {
-  font-size: 20px;
-  font-size: 21px;
-  font-family: Roboto;
-  color: #fdfffd;
-}
-
-.nav-link {
-  display: block;
-  padding: 0.4rem 2rem;
-  font-size: 21px;
-  font-family: Roboto;
-  color: #fdfffd;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-}
-.container {
-  text-align: center;
-  font-family: $general-font;
-  color: $general-letter-color;
-  background-color: $general-background-color;
-}
-
-.menubuttons {
-  @include button;
-  :hover {
-    background-color: rgb(255, 255, 255);
-    border-radius: 30px;
-    font-size: 20px;
-    font-family: Roboto;
-    color: #000000;
-  }
-
-  a {
-    color: rgb(255, 255, 255);
-  }
-}
-
-.NicoDropdown {
-  margin-left: 5%;
-  a {
-    color: rgb(248, 248, 248);
-    :hover {
-      background-color: $general-background-buttons;
-    }
-  }
-}
-
-.NicoDropdownItems {
-  :active {
-    background-color: rgb(255, 255, 255);
-  }
-  :hover {
-    background-color: $general-background-buttons;
-  }
-  a {
-    color: rgb(0, 0, 0);
-    :hover {
-      background-color: rgb(255, 255, 255);
-    }
-    :active {
-      background-color: black;
-    }
-  }
-}
-
-.menuContainer {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 10px;
-}
-
-.SeccionPoliticas,
-.SeccionNosotros {
-  background-color: $general-background-color;
-}
-
-body {
-  background-color: $general-background-color;
-}
-
-img {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 10px 0px 10px 10px;
-}
-
-.Secciones {
-  @include flex-row;
-}
-
-.SeccionesTexto {
-  @include SeccionesTexto;
-}
-
-.NicoCarrusel {
-  align-content: center;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  border: 0px;
-}
-.carouselContainer {
-  padding: 0px;
-  padding-left: 0px;
-}
-
-.containerNopadding {
-  padding: 0px;
-  padding-right: 10px;
-}
-
-/*Media querys*/
-
-@media (max-width: 800px) {
-  .Secciones {
-    @include flex-column;
-  }
-}
-/*texto informativo alado del carusel */
-// .titaño {
-
-//   font-family: Roboto;
-//   font-style: italic;
-//   font-weight: 900;
-//   font-size: 22px;
-//   line-height: 260.69%;
-//   /* or 33px */
-
-//   color: #03ff3b;
-
-//   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-// }
-h1 {
-  margin: 6rem auto 4rem;
-  letter-spacing: 5px;
-}
-
-h2 {
-  margin: 4rem auto 2rem;
-  letter-spacing: 5px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap');
+@import "index"
