--- a/css/nuevousuario.css
+++ b/css/nuevousuario.css
@@ -1,1 +1,119 @@
-/* No CSS *//*# sourceMappingURL=nuevousuario.css.map */
+body {
+  background-image: url(../utils/cateterismogif.gif);
+}
+
+/* <!-- Navbar - >  */
+.get_in_touch {
+  max-width: 800px;
+  margin: 50px auto;
+  position: relative;
+  -webkit-box-shadow: 0 10px 30px 0px;
+          box-shadow: 0 10px 30px 0px;
+  padding: 20px;
+}
+
+.get_in_touch .title {
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 10px;
+  font-size: 3em;
+  line-height: 48px;
+  padding-bottom: 70px;
+  color: #3c9c51;
+  top: -1px;
+  position: relative;
+  margin-top: auto;
+  margin-left: auto;
+}
+
+.contact-form .form-field {
+  position: relative;
+  margin: 32px 0;
+}
+
+.contact-form .input-text {
+  display: block;
+  width: 100%;
+  height: 36px;
+  border-width: 2 2 2px 2;
+  border-color: #000000;
+  font-size: 15px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+.contact-form .input-text:focus + .label,
+.contact-form .input-text.not-empty + .label {
+  -webkit-transform: translateY(-24px);
+          transform: translateY(-24px);
+}
+
+.contact-form .input-text:focus {
+  outline: none;
+}
+
+.contact-form .label {
+  position: absolute;
+  left: 20px;
+  bottom: 35px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #000000;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+  cursor: text;
+  text-transform: capitalize;
+}
+
+/* .submit-btn {
+        display: inline-block;
+        background-image: linear-gradiente(red, #a72879, #064497);
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 16px;
+        padding: 8px 16px;
+        border: none;
+        width: 200px;
+        cursor: pointer;
+      } */
+.contact-form .submit-btn {
+  display: inline-block;
+  width: 200px;
+  background: #080808;
+  border: 5px solid #000000;
+  border-radius: 40px;
+  color: #fdfdfd;
+  padding: 8px 16px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+#bloque {
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#contenedor {
+  vertical-align: middle;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  margin-left: 800px;
+  margin-right: auto;
+}
+
+footer {
+  position: relative;
+  top: 320px;
+}
+/*# sourceMappingURL=nuevousuario.css.map */
