--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,354 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap");
+body {
+  background-color: black;
+}
+
+h1 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.nav-link {
+  display: block;
+  padding: 15px;
+  font-size: 21px;
+  font-family: Roboto;
+  color: #fdfffd;
+  margin-bottom: 45px;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.container {
+  text-align: center;
+  font-family: "Alegreya", serif;
+  color: #ffffff;
+  background-color: black;
+  max-width: 1200px;
+}
+
+.menubuttons :hover {
+  background-color: white;
+  border-radius: 30px;
+  font-size: 20px;
+  font-family: Roboto;
+  color: #000000;
+}
+
+.menubuttons a {
+  color: white;
+}
+
+.NicoDropdown a {
+  color: #f8f8f8;
+}
+
+.NicoDropdown a :hover {
+  background-color: #3877ec;
+}
+
+.NicoDropdownItems :active {
+  background-color: white;
+}
+
+.NicoDropdownItems :hover {
+  background-color: #3877ec;
+}
+
+.NicoDropdownItems a {
+  color: black;
+}
+
+.NicoDropdownItems a :hover {
+  background-color: black;
+}
+
+.NicoDropdownItems a :active {
+  background-color: black;
+}
+
+.menuContainer {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+  width: 75%;
+  margin: 0 auto;
+}
+
+@media screen {
+  .menuContainer {
+    max-width: 768px;
+  }
+  .menuContainer .menuContainer {
+    width: 95%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen {
+  .menuContainer {
+    max-width: 1024px;
+  }
+  .menuContainer .menuContainer {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .menuContainer .menuContainer ul li {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .menuContainer .menuContainer ul li a {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 18%;
+            flex: 0 0 18%;
+    margin: 0;
+  }
+}
+
+*
+.carousel-item img {
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.SeccionPoliticas,
+.SeccionNosotros {
+  background-color: black;
+}
+
+img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 10px auto;
+}
+
+.NicoCarrusel {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  border: 0px;
+}
+
+.carouselContainer {
+  padding: 0px;
+  padding-left: 0px;
+}
+
+.containerNopadding {
+  padding: 0px;
+  padding-right: 10px;
+}
+
+.containerNopadding h1 {
+  margin: 6rem auto 4rem;
+  letter-spacing: 5px;
+}
+
+.containerNopadding h2 {
+  letter-spacing: 5px;
+  text-align: center;
+}
+
+.secciones {
+  width: 100%;
+}
+
+@media screen {
+  .secciones {
+    max-width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 45%;
+            flex: 0 0 45%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+img {
+  width: 95%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.titaño {
+  font-size: 18px;
+  width: 90%;
+  color: #fdfffd;
+  margin-top: 25px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.nuestrapolitica {
+  font-size: 20px;
+  color: #fdfffd;
+}
+
+.TextoQuienesSomos {
+  font-size: 18px;
+}
+
+.TextoPoliticas {
+  font-size: 18px;
+}
+
+h2 {
+  text-align: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+/* <!-- Navbar - >  */
+.get_in_touch {
+  max-width: 800px;
+  margin: 50px auto;
+  position: relative;
+  -webkit-box-shadow: 0 10px 30px 0px;
+          box-shadow: 0 10px 30px 0px;
+  padding: 20px;
+}
+
+.get_in_touch .title {
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 10px;
+  font-size: 3em;
+  line-height: 48px;
+  padding-bottom: 70px;
+  color: #3c9c51;
+  top: -1px;
+  position: relative;
+  margin-top: auto;
+  margin-left: auto;
+}
+
+.contact-form .form-field {
+  position: relative;
+  margin: 32px 0;
+}
+
+.contact-form .input-text {
+  display: block;
+  width: 100%;
+  height: 36px;
+  border-width: 2 2 2px 2;
+  border-color: #000000;
+  font-size: 15px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+.contact-form .input-text:focus + .label,
+.contact-form .input-text.not-empty + .label {
+  -webkit-transform: translateY(-24px);
+          transform: translateY(-24px);
+}
+
+.contact-form .input-text:focus {
+  outline: none;
+}
+
+.contact-form .label {
+  position: absolute;
+  left: 20px;
+  bottom: 35px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #000000;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+  cursor: text;
+  text-transform: capitalize;
+}
+
+/* .submit-btn {
+        display: inline-block;
+        background-image: linear-gradiente(red, #a72879, #064497);
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 16px;
+        padding: 8px 16px;
+        border: none;
+        width: 200px;
+        cursor: pointer;
+      } */
+.contact-form .submit-btn {
+  display: inline-block;
+  width: 200px;
+  background: #080808;
+  border: 5px solid #000000;
+  border-radius: 40px;
+  color: #fdfdfd;
+  padding: 8px 16px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+#bloque {
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#contenedor {
+  vertical-align: middle;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  margin-left: 800px;
+  margin-right: auto;
+}
+
+footer {
+  position: relative;
+  top: 320px;
+}
 /*# sourceMappingURL=style.css.map */
