--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap');
-@import "index"
+@import "index";
+@import "mixin";
+@import "nuevousuario"
