--- a/sass/_valvulas.scss
+++ b/sass/_valvulas.scss
@@ -47,16 +47,19 @@ container-fluid {
 .Procedimientos_imagenes {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  flex-wrap: wrap
 }
 
 .Procedimientos_imagenes {
   display: grid;
   grid-template-columns: 1fr;
+  flex-wrap: wrap
 }
 
 .Procedimientos_imagenes img {
   width: 100%;
   border-radius: 1rem;
+  flex-wrap: wrap
 }
 
 .Procedimientos h1 {
@@ -100,36 +103,37 @@ container-fluid {
   margin: 4rem 2rem;
   padding: 2rem;
   border-radius: 2rem;
-
+  flex-wrap: wrap;
   box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-}
 
-.Procedimientos__imagen:hover {
-  box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-}
 
-.Procedimientos__imagen {
-  width: 92%;
-  margin: 1rem auto;
-}
+  .Procedimientos__imagen:hover {
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
 
-.Procedimientos__imagen {
-  width: 90%;
-  margin: 1rem auto;
-  box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-}
+  .Procedimientos__imagen {
+    width: 92%;
+    margin: 1rem auto;
+  }
 
-.Procedimientos__imagen:hover {
-  box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-}
+  .Procedimientos__imagen {
+    width: 90%;
+    margin: 1rem auto;
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
 
-.Procedimientos h1 {
-  margin-top: 1rem;
-}
+  .Procedimientos__imagen:hover {
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
 
-.Procedimientos__imagen p {
-  text-align: center;
-  font-weight: normal;
-  line-height: 1.5;
-  margin: 1.4rem auto;
+  .Procedimientos h1 {
+    margin-top: 1rem;
+  }
+
+  .Procedimientos__imagen p {
+    text-align: center;
+    font-weight: normal;
+    line-height: 1.5;
+    margin: 1.4rem auto;
+  }
 }
