--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -150,7 +150,8 @@ a {
 .carousel-item img {
     height: 500px;
     object-fit: cover;
-    object-position: center
+    object-position: center;
+    margin: 40px auto;
 }
 
 .SeccionPoliticas,
