--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -25,21 +25,23 @@
 }
 
 .secciones {
-  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 
   @media screen {
     max-width: 768px;
 
 
     display: flex;
-    flex: 0 0 45%;
+    flex: 0 0 40%;
     flex-direction: row;
   }
 
 }
 
 img {
-  width: 95%;
+  width: 100%;
   object-fit: cover;
   object-position: center;
 
