--- a/sass/_nuevousuario.scss
+++ b/sass/_nuevousuario.scss
@@ -60,31 +60,22 @@
     text-transform: capitalize;
 }
 
-/* .submit-btn {
-        display: inline-block;
-        background-image: linear-gradiente(red, #a72879, #064497);
-        color: #fff;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        font-size: 16px;
-        padding: 8px 16px;
-        border: none;
-        width: 200px;
-        cursor: pointer;
-      } */
+
 .contact-form .submit-btn {
+
+    width: 100%;
     display: inline-block;
-    width: 200px;
-    background: #080808;
-    border: 5px solid #000000;
-    border-radius: 40px;
-    color: rgb(253, 253, 253);
-    padding: 8px 16px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 12px 0;
+    background: #dc143ccc;
+    color: black;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    padding: 10px;
+    font-size: 1.em;
+    opacity: 0, 9;
+    transition: opacity 0.3s ease;
+    border: none;
+    border-radius: 10px;
+
+
 }
 
 #bloque {
@@ -107,4 +98,5 @@
 footer {
     position: relative;
     top: 320px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
