--- a/sass/_valvulas.scss
+++ b/sass/_valvulas.scss
@@ -1,157 +1,125 @@
 /*# sourceMappingURL=valvula.css.map */
 /*variable global */
 
-* {
-  font-family: $general-font;
-  margin: 0;
-  padding: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #fdfdfd;
-  background-color: rgb(5, 5, 5);
-}
-
-
-
 /*header*/
-.text-primary {
-  color: #ff0505 !important;
-}
 
-container-fluid {
-  margin: 30px;
-}
 
-.bg-dark {
-  background-color: rgb(0, 0, 0) !important;
-}
+// container-fluid {
+//   margin: 30px;
+// }
 
-.navbar-dark .navbar-nav .nav-link {
-  color: aliceblue;
+
+
+h1 {
+  text-align: center;
 }
 
 /*Procedimientos*/
 
 /*cards estan aca */
 
-.Procedimientos {
-  width: auto;
-}
-
-.Procedimientos__imagen img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  object-position: center;
-}
 
 
 
-.Procedimientos_imagenes {
-  display: flex;
-  justify-content: space-evenly;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  flex-wrap: wrap;
+@media (max-width:767px) {
+  .Procedimientos__imagen {
+    width: 90%;
+    height: max-content;
+    margin: 0 auto;
 
-}
 
-.Procedimientos_imagenes {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  flex-wrap: wrap
-}
+    display: grid;
+    grid-template-columns: 1fr;
+    flex-wrap: wrap;
+    margin: 1rem auto;
+    display: flex;
 
-.Procedimientos_imagenes {
-  display: grid;
-  grid-template-columns: 1fr;
-  flex-wrap: wrap
-}
 
-.Procedimientos_imagenes img {
+  }
 
-  width: 50%;
-  border-radius: 1rem;
-  flex-wrap: wrap
-}
-
-.Procedimientos h1 {
-  margin: 4rem auto 2rem;
-  color: rgb(255, 255, 255);
-}
-
-.Procedimientos__subtitulo {
-  color: var(--ColorPrimarioTexto);
-  font-size: 2rem;
-  font-weight: 700;
-  margin: 2rem 1rem;
-  text-align: center;
-  color: rgb(249, 255, 255);
-}
-
-.Procedimientos__imagen {
-
-  margin-top: 4rem;
-  padding: 2rem;
-  border-radius: 2rem;
-  background: color #dc143c;
-  ;
-  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.75);
-  transition: transform 0.5s;
-  /*para dar efecto escalable*/
-}
-
-.Procedimientos__imagen:hover {
-  transform: scale(1.03);
-  /*para dar efecto escalable*/
-
-  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.75);
-  transition: transform 0.5s;
-}
-
-.Procedimientos__imagen {
-  width: 50%;
-  height: 400px;
-  margin: 0;
-  padding: 0;
-  border-radius: 2rem;
-  flex-wrap: wrap;
-  box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-  display: flex;
+  .Procedimientos__imagen {
+    width: 40rem;
+    height: 60rem;
+    margin-top: 4rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: black;
+    -webkit-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.75);
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+    /*para dar efecto escalable*/
+  }
 
   .Procedimientos__imagen:hover {
+    -webkit-transform: scale(1.03);
+    transform: scale(1.03);
+    /*para dar efecto escalable*/
+    -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.75);
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+  }
+
+  .Procedimientos__imagen {
+    width: 40rem;
+    height: 60rem;
+    margin: 4rem 2rem;
+    padding: 2rem;
+    border-radius: 2rem;
+    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  }
+
+  .Procedimientos__imagen:hover {
+    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
   }
 
   .Procedimientos__imagen {
-    width: 50%;
+    width: 92%;
     margin: 1rem auto;
-    display: flex;
   }
 
-  @media (max-width:767px) {
-    .Procedimientos__imagen {
-      width: 50%;
-      height: max-content;
-      margin: 0 auto;
-      box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
-
-    }
-  }
-
-  .Procedimientos__imagen:hover {
+  .Procedimientos__imagen {
+    width: 90%;
+    margin: 1rem auto;
+    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
   }
 
-  .Procedimientos h1 {
-    margin-top: 1rem;
+  .Procedimientos__imagen:hover {
+    -webkit-box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
   }
 
-  .Procedimientos__imagen p {
-    text-align: center;
-    font-weight: normal;
-    line-height: 1.5;
-    margin: 1.4rem auto;
+  .Procedimientos_imagenes {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
   }
+
+  .Procedimientos_imagenes {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr 2);
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .Procedimientos_imagenes {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
+
+
 }
