se suben reformas estructurales

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -188,6 +188,14 @@ img {
 
 
 
+.titaño {
+    font-size: 18px;
+    width: 90%;
+    color: #fdfffd;
+    margin-top: 25px;
+    text-align: center;
+    margin: 0 auto;
+}
 
 
 
