--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -8,6 +8,7 @@ $telefono:480px;
 
 .body {
     background: black;
+
 }
 
 h1 {
@@ -188,18 +189,17 @@ img {
 
 
 
-.titaño {
-    font-size: 18px;
-    width: 90%;
+.textos {
+    font-size: 30px;
+
     color: #fdfffd;
     margin-top: 25px;
     text-align: center;
     margin: 0 auto;
 }
 
-p {
-    font-size: 30px;
-}
+
+
 
 
 h1 {
