--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -7,28 +7,34 @@ $general-background-buttons: rgb(56, 119, 236);
 $telefono:480px;
 
 
+.body {
+    background: rgb(0, 0, 0);
+}
+
+p {
+    font-size: 30px;
+}
+
+ul li {
+    font-size: 20px;
+}
 
 h1 {
-
     font-size: 60px;
     font-weight: 700;
     margin-bottom: 25px;
 }
 
 h2 {
-
     text-align: center;
-
-
     margin-top: 30px;
-
 }
 
 .container {
     text-align: center;
-    font-family: $general-font;
-    color: $general-letter-color;
-    background-color: $general-background-color;
+    font-family: "Alegreya", serif;
+    color: #ffffff;
+    background-color: rgb(0, 0, 0);
     max-width: 1200px;
 }
 
@@ -46,55 +52,54 @@ a {
     background-color: transparent;
 }
 
-
-
-.menubuttons {
-
-
-    :hover {
-        background-color: rgb(255, 255, 255);
-        border-radius: 30px;
-        font-size: 20px;
-        font-family: Roboto;
-        color: #000000;
-    }
-
-    a {
-        color: rgb(255, 255, 255);
-    }
+.menubuttons :hover {
+    background-color: white;
+    border-radius: 30px;
+    font-size: 20px;
+    font-family: Roboto;
+    color: #3A5FF8;
 }
 
-.NicoDropdown {
+.menubuttons a {
+    color: rgb(255, 255, 255);
 
-    a {
-        color: rgb(248, 248, 248);
-
-        :hover {
-            background-color: $general-background-buttons;
-        }
-    }
 }
 
-.NicoDropdownItems {
-    :active {
-        background-color: rgb(255, 255, 255);
-    }
+.NicoDropdown a {
+    color: #f8f8f8;
+}
 
-    :hover {
-        background-color: $general-background-buttons;
-    }
+.NicoDropdown a :hover {
+    background-color: #000000;
+}
 
-    a {
-        color: rgb(0, 0, 0);
+.NicoDropdownItems :active {
+    background-color: white;
+}
 
-        :hover {
-            background-color: rgb(0, 0, 0);
-        }
+.NicoDropdownItems :hover {
+    background-color: rgb(19, 81, 250);
+}
 
-        :active {
-            background-color: black;
-        }
-    }
+.NicoDropdownItems a {
+    color: black;
+}
+
+.NicoDropdownItems a :hover {
+    background-color: rgb(255, 255, 255);
+}
+
+
+h1 {
+    margin: 6rem auto 4rem;
+    letter-spacing: 5px;
+    color: #3A5FF8;
+}
+
+h2 {
+    letter-spacing: 5px;
+    text-align: center;
+    margin: 6rem auto 4rem;
 }
 
 .menuContainer {
@@ -147,12 +152,11 @@ a {
 
 
 .carousel-item img {
-
-    height: 500px;
-
+    height: 600px;
     margin: 40px auto;
-
+    width: 100%;
 }
+
 
 .carouselContainer {
     padding: 0px;
